@@ -1,12 +1,14 @@
 package com.github.lutzluca.btrbz.core.widgets.layout;
 
+import com.github.lutzluca.btrbz.core.widgets.WidgetMath;
 import net.minecraft.client.Minecraft;
 
 public final class WidgetScaleResolver {
     public static final double MIN_SCALE = 0.5;
     public static final double MAX_SCALE = 2.0;
 
-    private WidgetScaleResolver() {}
+    private WidgetScaleResolver() {
+    }
 
     public static double automaticGuiScale() {
         var window = Minecraft.getInstance().getWindow();
@@ -53,8 +55,11 @@ public final class WidgetScaleResolver {
     }
 
     public static double clampScale(double value) {
-        if (!Double.isFinite(value)) return 1.0;
-        return Math.max(MIN_SCALE, Math.min(MAX_SCALE, value));
+        if (!Double.isFinite(value)) {
+            return 1.0;
+        }
+
+        return WidgetMath.clamp(value, MIN_SCALE, MAX_SCALE);
     }
 
     public static boolean fitsCanvas(
@@ -71,7 +76,10 @@ public final class WidgetScaleResolver {
     private static double fitDimension(double scale, int available, int logicalSize) {
         int safeAvailable = Math.max(1, available);
         int safeLogicalSize = Math.max(1, logicalSize);
-        if (Math.ceil(safeLogicalSize * scale) <= safeAvailable) return scale;
+
+        if (Math.ceil(safeLogicalSize * scale) <= safeAvailable) {
+            return scale;
+        }
 
         return Math.min(scale, Math.nextDown(safeAvailable / (double) safeLogicalSize));
     }
